--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,10 @@
+@import "abstracts/mixins";
+@import "abstracts/variables";
+
 @import "base/base";
 @import "base/typography";
+
+@import "components/search";
 
 @import "layout/header";
 
