--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,4 +6,9 @@
     color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
+
+    
+    @media screen and (max-width: 500px) {
+        font-size: 10rem;
+    }
 }
