--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,3 +1,10 @@
+body {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    color: $color-text-dark;
+}
+
 .header__logo-text {
     font-family: 'Cookie', cursive;
     font-size: 15rem;
@@ -11,4 +18,10 @@
     @media screen and (max-width: 500px) {
         font-size: 10rem;
     }
+}
+
+.heading-filters {
+    font-size: 4rem;
+    text-transform: uppercase;
+    text-align: center;
 }
