--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+// COLOR
 $color-primary-dark: #45949C;
 $color-primary-light: #B0DAD5;
 $color-secondary-dark: #E29578;
@@ -7,3 +8,8 @@ $color-tertiary-light: #EDF6F9;
 
 $color-text-dark: #293132;
 $color-text-light: #EAE8FF;
+
+// GRID
+$grid-width: 110rem;
+$gutter-vertical: 5rem;
+$gutter-horizontal: 3rem;
