--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,19 @@ body {
   box-sizing: border-box;
   background-color: #EDF6F9; }
 
+main {
+  padding: 0 2rem; }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #293132; }
+
 .header__logo-text {
   font-family: 'Cookie', cursive;
   font-size: 15rem;
+  line-height: 1;
   display: inline-block;
   background-image: url(../../images/dan-gold-4-veggies.jpg);
   color: transparent;
@@ -25,6 +35,21 @@ body {
   @media screen and (max-width: 500px) {
     .header__logo-text {
       font-size: 10rem; } }
+
+.heading-filters {
+  font-size: 4rem;
+  text-transform: uppercase;
+  text-align: center; }
+
+.filter-box {
+  border: 1px solid rgba(69, 148, 156, 0.5);
+  border-radius: 1rem;
+  padding-bottom: 1rem;
+  margin-top: 4rem;
+  text-align: center;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.12), 2px 2px 4px rgba(0, 0, 0, 0.12), 4px 4px 8px rgba(0, 0, 0, 0.12), 8px 8px 16px rgba(0, 0, 0, 0.12); }
+  .filter-box .icon {
+    font-size: 10rem; }
 
 .search-icon {
   color: #45949C;
@@ -43,6 +68,24 @@ body {
     transform: translateY(-1px) scale(1.05);
     text-shadow: 0 0.3rem 0.8rem rgba(69, 148, 156, 0.7); }
 
+.row {
+  max-width: 110rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 5rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 3rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 3rem) / 2); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3* 3rem) / 4); }
+
 .header {
   position: relative;
   height: 20rem;
@@ -53,7 +96,12 @@ body {
     left: 10%; }
   @media screen and (max-width: 793px) {
     .header {
-      height: 40rem; } }
+      height: 35rem; } }
   @media screen and (max-width: 500px) {
     .header {
       height: 25rem; } }
+
+.section-filters {
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 5rem 0; }
