added basic style for filter-section

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,6 +8,7 @@ body {
 .header__logo-text {
     font-family: 'Cookie', cursive;
     font-size: 15rem;
+    line-height: 1;
     display: inline-block;
     background-image: url(../../images/dan-gold-4-veggies.jpg);
     color: transparent;
