--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,23 @@ body {
   text-transform: uppercase;
   text-align: center; }
 
+.filter-name {
+  font-size: 2rem; }
+
 .filter-box {
   border: 1px solid rgba(69, 148, 156, 0.5);
   border-radius: 1rem;
   padding-bottom: 1rem;
   margin-top: 4rem;
   text-align: center;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.12), 2px 2px 4px rgba(0, 0, 0, 0.12), 4px 4px 8px rgba(0, 0, 0, 0.12), 8px 8px 16px rgba(0, 0, 0, 0.12); }
+  transition: all .3s;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 2px 2px rgba(0, 0, 0, 0.12), 2px 4px 4px rgba(0, 0, 0, 0.12), 4px 8px 8px rgba(0, 0, 0, 0.12); }
+  .filter-box:hover {
+    transform: translateY(-2px) scale(1.1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 2px 2px rgba(0, 0, 0, 0.12), 2px 4px 4px rgba(0, 0, 0, 0.12), 4px 8px 8px rgba(0, 0, 0, 0.12), 8px 16px 16px rgba(0, 0, 0, 0.12); }
+  .filter-box:active {
+    transform: translateY(-1px) scale(1.05);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 2px 2px rgba(0, 0, 0, 0.12), 2px 4px 4px rgba(0, 0, 0, 0.12), 4px 8px 8px rgba(0, 0, 0, 0.12); }
   .filter-box .icon {
     font-size: 10rem; }
 
