--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -4,10 +4,28 @@
     padding-bottom: 1rem;
     margin-top: 4rem;
     text-align: center;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, .12),
-        2px 2px 4px rgba(0, 0, 0, .12),
-        4px 4px 8px rgba(0, 0, 0, .12),
-        8px 8px 16px rgba(0, 0, 0, .12);
+    transition: all .3s;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, .12),
+        1px 2px 2px rgba(0, 0, 0, .12),
+        2px 4px 4px rgba(0, 0, 0, .12),
+        4px 8px 8px rgba(0, 0, 0, .12);
+
+    &:hover {
+        @include pop-out;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, .12),
+            1px 2px 2px rgba(0, 0, 0, .12),
+            2px 4px 4px rgba(0, 0, 0, .12),
+            4px 8px 8px rgba(0, 0, 0, .12),
+            8px 16px 16px rgba(0, 0, 0, .12);
+    }
+
+    &:active {
+        @include press-in;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, .12),
+            1px 2px 2px rgba(0, 0, 0, .12),
+            2px 4px 4px rgba(0, 0, 0, .12),
+            4px 8px 8px rgba(0, 0, 0, .12);
+    }
 
     .icon {
         font-size: 10rem;
