--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -25,6 +25,7 @@ body {
     font-size: 4rem;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 4rem;
 }
 
 .filter-name {
@@ -32,7 +33,18 @@ body {
 }
 
 .recipe {
-    &__name{
+    color: $color-text-light;
+
+    &__name {
         font-size: 2rem;
+        line-height: 2.5rem;
+        text-shadow: 
+            1px 1px 2px rgba(0, 0, 0, .4),
+            2px 2px 4px rgba(0, 0, 0, .4);
+    }
+
+    &__features {
+        font-size: 1.2rem;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     }
 }
