--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "base/base";
 @import "base/typography";
 
+@import "components/featured";
 @import "components/filters";
 @import "components/search";
 
