--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,19 @@
+@mixin box-shadow {
+    box-shadow: 
+        0px 1px 1px rgba(0, 0, 0, .12),
+        0px 2px 2px rgba(0, 0, 0, .12),
+        0px 4px 4px rgba(0, 0, 0, .12),
+        0px 8px 8px rgba(0, 0, 0, .12);
+}
+
+@mixin box-shadow-large {
+    box-shadow: 
+        0px 1px 1px rgba(0, 0, 0, .12),
+        0px 2px 2px rgba(0, 0, 0, .12),
+        0px 4px 4px rgba(0, 0, 0, .12),
+        0px 8px 8px rgba(0, 0, 0, .12),
+        0px 16px 16px rgba(0, 0, 0, .12);
+}
 @mixin pop-out {
     transform: translateY(-2px) scale(1.1);
 }
