--- a/sass/components/_featured.scss
+++ b/sass/components/_featured.scss
@@ -1,11 +1,14 @@
 .recipe {
     position: relative;
     height: 25rem;
+    border-radius: .5rem;
+    @include box-shadow;
 
     &__image {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: .5rem;
     }
 
     &__text {
@@ -13,8 +16,9 @@
         width: 100%;
         height: 7rem;
         bottom: 0;
+        border-bottom-right-radius: .5rem;
+        border-bottom-left-radius: .5rem;
         transition: all .3s ease-in;
-        
     }
 
     &__name {
@@ -55,10 +59,7 @@
         &--difficulty {
             transform: translateY(-3rem);}
     }
-    &:hover &__name {
-        transform: translateY(-2rem);
-    }
-    &:hover &__text {
-        background-color: rgba($color-tertiary-dark, .7);
-    }
+
+    &:hover &__name { transform: translateY(-2rem); }
+    &:hover &__text { background-color: rgba($color-tertiary-dark, .7); }
 }
