--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,21 @@ body {
 
 .recipe {
   position: relative;
-  height: 25rem; }
+  height: 25rem;
+  border-radius: .5rem;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.12), 0px 8px 8px rgba(0, 0, 0, 0.12); }
   .recipe__image {
     width: 100%;
     height: 100%;
-    object-fit: cover; }
+    object-fit: cover;
+    border-radius: .5rem; }
   .recipe__text {
     position: absolute;
     width: 100%;
     height: 7rem;
     bottom: 0;
+    border-bottom-right-radius: .5rem;
+    border-bottom-left-radius: .5rem;
     transition: all .3s ease-in; }
   .recipe__name {
     position: absolute;
@@ -107,13 +112,13 @@ body {
   padding-bottom: 1rem;
   text-align: center;
   transition: all .3s;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 2px 2px rgba(0, 0, 0, 0.12), 2px 4px 4px rgba(0, 0, 0, 0.12), 4px 8px 8px rgba(0, 0, 0, 0.12); }
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.12), 0px 8px 8px rgba(0, 0, 0, 0.12); }
   .filter-box:hover {
     transform: translateY(-2px) scale(1.1);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 2px 2px rgba(0, 0, 0, 0.12), 2px 4px 4px rgba(0, 0, 0, 0.12), 4px 8px 8px rgba(0, 0, 0, 0.12), 8px 16px 16px rgba(0, 0, 0, 0.12); }
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.12), 0px 8px 8px rgba(0, 0, 0, 0.12), 0px 16px 16px rgba(0, 0, 0, 0.12); }
   .filter-box:active {
     transform: translateY(-1px) scale(1.05);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 1px 2px 2px rgba(0, 0, 0, 0.12), 2px 4px 4px rgba(0, 0, 0, 0.12), 4px 8px 8px rgba(0, 0, 0, 0.12); }
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.12), 0px 8px 8px rgba(0, 0, 0, 0.12); }
   .filter-box .icon {
     font-size: 10rem; }
 
