--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,8 +1,7 @@
-.section-filters {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-}
-
 .section-featured {
-    margin-top: 10rem;
+    padding-top: 10rem;
+}
+.section-filters {
+    padding-top: 10rem;
+    margin-bottom: 10rem;
 }
